--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@
 # They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
 
+
+# MacOS only
+.DS_Store
+
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
